# delay770

./: .gitignore  .gitmodules  AAX.md  AUv2.md  Changelog.md  README.md
my_plugins/: CMakeLists.txt
my_plugins/Delay770/: CMakeLists.txt
my_plugins/Delay770/image/: knob.html
my_plugins/Delay770/include/: buffer.h  constants.h  controller.h  delaybuffer.h  id.h  parameter.h  processor.h  version.h
my_plugins/Delay770/resource/: Info.plist  Plugin.rc  main.uidesc
my_plugins/Delay770/source/: buffer.cpp  controller.cpp  delaybuffer.cpp  factory.cpp  parameter.cpp  processor.cpp
my_plugins/Delay770aax/: CMakeLists.txt
my_plugins/Delay770aax/source/: aax.cpp
my_plugins/Delay770auv2/: CMakeLists.txt  Info.plist  audiounitconfig.h
tools/: darwin_setup.bash  windows_setup.bat
